<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019
  ~ All rights reserved Amogh Mehta
  ~ Last Modified 1/7/19 12:18 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical">



    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scoutviewmastertableid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/selector"
        android:gravity="top">
        <TableRow
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingBottom="0dp"
            android:paddingTop="0dp" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/TeamName"
                android:ellipsize="end"
                android:maxLines="100"
                android:minLines="1"
                android:id="@+id/scoutviewmasterteamname"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/scoutviewmasterteamnumber"
                android:background="@drawable/selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:layout_weight="1"
                android:text="@string/TeamNumber"
                android:textColor="@color/darkgray"
                android:textSize="18sp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/scoutviewmastergamenumber"
                android:background="@drawable/selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/GameNumber"
                android:maxLines="1"
                android:textColor="@color/darkgray"
                android:textSize="18sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/scoutviewmastergamedate"
                android:background="@drawable/selector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:layout_weight="1"
                android:text="@string/GameDate"
                android:textColor="@color/darkgray"
                android:textSize="18sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/scoutviewmastergamescore"
                android:background="@drawable/selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:maxLines="1"
                android:text="@string/GameScore"
                android:textColor="@color/darkgray"
                android:textSize="18sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>


    </TableLayout>

    <!-- Divider -->
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gray" />

</LinearLayout>
